# file-template

./: README.md  pyproject.toml
file_template/: __main__.py  banner.txt  cli.py
