[tool.poetry]
name = "file-template"
version = "1.1.0"
description = ""
license = "AGPL-3.0-or-later"
authors = ["Alexandre Janvrin <alexandre.janvrin@reseau.eseo.fr>"]
readme = "README.md"
homepage = "https://github.com/LivinParadoX/file-template/"
repository = "https://pypi.org/project/file-template/"
classifiers = [
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
]
include = ["file-template/**/*"]

[tool.poetry.scripts]
file-template = "file_template.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
icecream = "^2.1.0"
neovim = "^0.3.1"
jedi = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
